tests/compile-fail/tracked_fn_return_ref.stderr
error[E0106]: missing lifetime specifier
  --> tests/compile-fail/tracked_fn_return_ref.rs:33:6
   |
33 | ) -> ContainsRef {
   |      ^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider using the `'db` lifetime
   |
33 | ) -> ContainsRef<'db> {
   |                 +++++

warning: elided lifetime has a name
  --> tests/compile-fail/tracked_fn_return_ref.rs:33:6
   |
30 | fn tracked_fn_return_struct_containing_ref_elided_implicit<'db>(
   |                                                            --- lifetime `'db` declared here
...
33 | ) -> ContainsRef {
   |      ^^^^^^^^^^^ this elided lifetime gets resolved as `'db`
   |
   = note: `#[warn(elided_named_lifetimes)]` on by default

warning: elided lifetime has a name
  --> tests/compile-fail/tracked_fn_return_ref.rs:43:18
   |
40 | fn tracked_fn_return_struct_containing_ref_elided_explicit<'db>(
   |                                                            --- lifetime `'db` declared here
...
43 | ) -> ContainsRef<'_> {
   |                  ^^ this elided lifetime gets resolved as `'db`

error[E0277]: the trait bound `&'db str: Update` is not satisfied
  --> tests/compile-fail/tracked_fn_return_ref.rs:15:67
   |
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                                                                   ^^^^^^^^ the trait `Update` is not implemented for `&'db str`
   |
   = help: the trait `Update` is implemented for `String`
note: required by a bound in `<tracked_fn_return_ref::Configuration_ as salsa::function::Configuration>::execute::_assert_return_type_is_update::_assert_is_update`
  --> tests/compile-fail/tracked_fn_return_ref.rs:14:1
   |
14 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `_assert_is_update`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ContainsRef<'db>: Update` is not satisfied
  --> tests/compile-fail/tracked_fn_return_ref.rs:23:6
   |
23 | ) -> ContainsRef<'db> {
   |      ^^^^^^^^^^^^^^^^ the trait `Update` is not implemented for `ContainsRef<'db>`
   |
   = help: the following other types implement trait `Update`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `<tracked_fn_return_struct_containing_ref::Configuration_ as salsa::function::Configuration>::execute::_assert_return_type_is_update::_assert_is_update`
  --> tests/compile-fail/tracked_fn_return_ref.rs:19:1
   |
19 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `_assert_is_update`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ContainsRef<'db>: Update` is not satisfied
  --> tests/compile-fail/tracked_fn_return_ref.rs:43:6
   |
43 | ) -> ContainsRef<'_> {
   |      ^^^^^^^^^^^^^^^ the trait `Update` is not implemented for `ContainsRef<'db>`
   |
   = help: the following other types implement trait `Update`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `<tracked_fn_return_struct_containing_ref_elided_explicit::Configuration_ as salsa::function::Configuration>::execute::_assert_return_type_is_update::_assert_is_update`
  --> tests/compile-fail/tracked_fn_return_ref.rs:39:1
   |
39 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `_assert_is_update`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
